<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:context=".ui.login.LoginActivity">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_marginTop="50dp"
                        android:src="@mipmap/ic_launcher"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                        android:id="@+id/llPhoneEditText"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="22dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/rounded_white_strock_primary"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView2">

                    <ImageView
                            android:id="@+id/iconCall"
                            android:layout_width="24dp"
                            android:layout_height="19dp"
                            android:layout_marginStart="8dp"

                            android:src="@drawable/ic_call" />

                    <EditText
                            android:id="@+id/phoneEditText"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_weight="1"
                            android:background="@color/transparent"
                            android:focusable="true"
                            android:hint="@string/phone"
                            android:inputType="phone"
                            android:textAlignment="viewStart"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray0" />


                    <TextView
                            android:id="@+id/countryCodeTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:hint="966" />
                </LinearLayout>

                <LinearLayout
                        android:id="@+id/llPasswordEditText"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/rounded_white_strock_primary"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="@+id/llPhoneEditText"
                        app:layout_constraintStart_toStartOf="@+id/llPhoneEditText"
                        app:layout_constraintTop_toBottomOf="@+id/llPhoneEditText">

                    <ImageView
                            android:id="@+id/iconPassword"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginStart="8dp"
                            android:src="@drawable/ic_pass" />

                    <EditText
                            android:id="@+id/passwordEditText"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_weight="1"
                            android:background="@color/transparent"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:textAlignment="viewStart"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray0" />

                    <ImageView
                            android:id="@+id/passwordToggleImageView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp" />
                </LinearLayout>

                <Button
                        android:id="@+id/loginButton"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/background_button_primary"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/llPasswordEditText" />


                <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/or"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="@+id/loginButton"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="@+id/loginButton"
                        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

                <Button
                        android:id="@+id/registerBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/rounded_white_strock_primary"
                        android:text="@string/register"
                        android:textColor="@color/color_primary"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textView2" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
